--- a/planning.html
+++ b/planning.html
@@ -3,13 +3,20 @@
 <head>
     <title>Planning schooljaar</title>
     <style>
+        *{
+            font-family: sans-serif;
+            padding-left: 4px;
+        }
         table {
             font-family: arial, sans-serif;
+            table-layout: fixed;
             border-collapse: collapse;
-            width: 100%;
+            width: 100%
+            margin-bottom: 60px;
         }
 
         td, th {
+            width: 25%;
             border: 1px solid black;
             text-align: left;
             padding: 8px;
@@ -26,32 +33,48 @@
 
 <table>
     <tr>
+        <th>Week 36</th>
+        <th>Week 37</th>
+        <th>Week 38</th>
+        <th>Week 39</th>
+        <th>Week 40</th>
+        <th>Week 41</th>
+        <th>Week 42</th>
+        <th>Week 43</th>
+        <th>Week 44</th>
+        <th>Week 45</th>
+        <th>Week 46</th>
+        <th>Week 47</th>
+        <th>Week 48</th>
+        <th>Week 49</th>
+        <th>Week 50</th>
+        <th>Week 51</th>
+        <th>Week 52</th>
         <th>Week 1</th>
         <th>Week 2</th>
         <th>Week 3</th>
-        <th>Week 4</th>
-        <th>Week 5</th>
-        <th>Week 6</th>
-        <th>Week 7</th>
-        <th>Week 8</th>
-        <th>Week 9</th>
-        <th>Week 10</th>
-        <th>Week 11</th>
-        <th>Week 12</th>
     </tr>
     <tr>
         <td>Database ontwerpen </td>
-        <td>Beroeps examen</td>
-        <td>Beroeps examen</td>
-        <td>Beroeps examen</td>
-        <td>Beroeps examen</td>
-        <td>Beroeps examen</td>
-        <td>Nederlands examen</td>
-        <td>Keuzedelen</td>
-        <td>Keuzedelen</td>
-        <td>Keuzedelen</td>
-        <td>Keuzedelen</td>
-        <td>Keuzedelen</td>
+        <td>ROC-DEV</td>
+        <td>ROC-DEV</td>
+        <td>ROC-DEV</td>
+        <td>ROC-DEV</td>
+        <td>ROC-DEV</td>
+        <td>ROC-DEV</td>
+        <td></td>
+        <td>Keuzedeel 1</td>
+        <td>Keuzedeel 1</td>
+        <td>Keuzedeel 1</td>
+        <td>Keuzedeel 2</td>
+        <td>Keuzedeel 2</td>
+        <td>Keuzedeel 2</td>
+        <td>Keuzedeel 3</td>
+        <td>Keuzedeel 3</td>
+        <td>Keuzedeel 3</td>
+        <td>Keuzedeel 4</td>
+        <td>Keuzedeel 4</td>
+        <td>Keuzedeel 4</td>
     </tr>
     <tr>
         <td>Eindeboordeling stage</td>
@@ -60,12 +83,20 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Loopbaan en Burgerschap</td>
-        <td>Loopbaan en Burgerschap</td>
-        <td>Loopbaan en Burgerschap</td>
-        <td>Loopbaan en Burgerschap</td>
-        <td>Loopbaan en Burgerschap</td>
-        <td>Loopbaan en Burgerschap</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td>L&B</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>Sollicitatie ROC-DEV project</td>
@@ -75,8 +106,16 @@
         <td></td>
         <td></td>
         <td></td>
+        <td>NL examen?</td>
         <td></td>
-        <td>Engels examen</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Engels examen?</td>
+        <td></td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -84,7 +123,8 @@
     <tr></tr>
 </table>
 
-<p>
+<h3>Reflectie verslag</h3>
+<p style="width: 50%">
     Ik ben hier nu een jaar en lig voor op schema dus ik kan denk ik wel zeggen dat ik al wel wat gepresteerd heb. Zelf ben ik tevreden over waar ik nu sta en in hoeverre ik voor loop op schema. Dingen die ik tot nu toe goed heb gedaan zijn het doorwerken zowel op school als thuis. Mijn verbeterpunten zijn denk ik dat ik als ik me nog iets meer concentreer ik nog meer gedaan kan krijgen. Mijn belangerijkste doel dit jaar is om mijn diploma te halen.
 </p>
 
