--- a/planning.html
+++ b/planning.html
@@ -11,7 +11,7 @@
             font-family: arial, sans-serif;
             table-layout: fixed;
             border-collapse: collapse;
-            width: 100%
+            width: 100%;
             margin-bottom: 60px;
         }
 
